--- a/portfolio.html
+++ b/portfolio.html
@@ -39,7 +39,60 @@
             </li>
         </ul>
     </header>
-    <main></main>
+    <main>
+        <h2 hidden>Выполенные проэкты</h2>
+        <ul>
+            <li>
+                <img width="370" src="./img/img21.jpg" alt="ноутбук">
+                <h3 class="project-name">Технокряк</h3>
+                <p class="type-of-project">Веб-сайт</p>
+            </li>
+            <li>
+                <img width="370" src="./img/img22.jpg" alt="баскетбол">
+                <h3 class="project-name">Постер New Orlean vs Golden Star</h3>
+                <p class="type-of-project">Дизайн</p>
+            </li>
+            <li>
+                <img width="370" src="./img/img23.jpg" alt="лого ресторана">
+                <h3 class="project-name">Ресторан Seafood</h3>
+                <p class="type-of-project">Приложение</p>
+            </li>
+        </ul>
+        <ul>
+            <li>
+                <img width="370" src="./img/img24.jpg" alt="наушеики">
+                <h3 class="project-name">Проект Prime</h3>
+                <p class="type-of-project">Маркетинг</p>
+            </li>
+            <li>
+                <img width="370" src="./img/img25.jpg" alt="2 коробки">
+                <h3 class="project-name">Проект Boxes</h3>
+                <p class="type-of-project">Приложение</p>
+            </li>
+            <li>
+                <img width="370" src="./img/img26.jpg" alt="монитор">
+                <h3 class="project-name">Inspiration has no Borders</h3>
+                <p class="type-of-project">Веб-сайт</p>
+            </li>
+        </ul>
+        <ul>
+            <li>
+                <img width="370" src="./img/img27.jpg" alt="открытый журнал">
+                <h3 class="project-name">Издание Limited Edition</h3>
+                <p class="type-of-project">Дизайн</p>
+            </li>
+            <li>
+                <img width="370" src="./img/img28.jpg" alt="лейба">
+                <h3 class="project-name">Проект LAB</h3>
+                <p class="type-of-project">Маркетинг</p>
+            </li>
+            <li>
+                <img width="370" src="./img/img29.jpg" alt="робота с ноутбуком">
+                <h3 class="project-name">Growing Business</h3>
+                <p class="type-of-project">Приложение</p>
+            </li>
+        </ul>
+    </main>
     <footer>
         <div>
             <a class="footer-logo link" href="" lang="en"><span class="accent-color">Web</span>Studio</a>
