--- a/index.html
+++ b/index.html
@@ -20,22 +20,22 @@
       <a class="header-logo link" href="" lang="en"> <span class="accent-color">Web</span>Studio</a>
       <ul class="header-left-list list">
         <li class="header-left-item">
-          <a class="link accent-color" href="">Студия</a>
+          <a class="link header-left-link" href="">Студия</a>
         </li>
         <li class="header-left-item">
-          <a class="link first-text-color" href="./portfolio.html">Портфолио</a>
+          <a class="link header-left-link" href="./portfolio.html">Портфолио</a>
         </li>
         <li class="header-left-item">
-          <a class="link first-text-color" href="">Контакты</a>
+          <a class="link header-left-link" href="">Контакты</a>
         </li>
       </ul>
     </nav>
     <ul class="header-right-list list">
       <li class="header-rihgt-item">
-        <a class="link accent-color" href="mailto:info@devstudio.com">info@devstudio.com</a>
+        <a class="link header-rihgt-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
       </li>
       <li>
-        <a class="link second-text-color" href="tel:+380961111111">+38 096 111 11 11</a>
+        <a class="link header-rihgt-link" href="tel:+380961111111">+38 096 111 11 11</a>
       </li>
     </ul>
   </header>
