--- a/portfolio.html
+++ b/portfolio.html
@@ -20,27 +20,44 @@
             <a class="header-logo link" href="" lang="en"> <span class="accent-color">Web</span>Studio</a>
             <ul class="header-left-list list">
                 <li class="header-left-item">
-                    <a class="link accent-color" href="./index.html">Студия</a>
+                    <a class="link header-left-link" href="./index.html">Студия</a>
                 </li>
                 <li class="header-left-item">
-                    <a class="link first-text-color" href="">Портфолио</a>
+                    <a class="link header-left-link" href="./portfolio.html">Портфолио</a>
                 </li>
                 <li class="header-left-item">
-                    <a class="link first-text-color" href="">Контакты</a>
+                    <a class="link header-left-link" href="">Контакты</a>
                 </li>
             </ul>
         </nav>
         <ul class="header-right-list list">
             <li class="header-rihgt-item">
-                <a class="link accent-color" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                <a class="link header-rihgt-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
             </li>
             <li>
-                <a class="link second-text-color" href="tel:+380961111111">+38 096 111 11 11</a>
+                <a class="link header-rihgt-link" href="tel:+380961111111">+38 096 111 11 11</a>
             </li>
         </ul>
     </header>
     <main>
         <h2 hidden>Выполенные проэкты</h2>
+        <ul class="main-filter list">
+            <li>
+                <button class="main-filter-btn pointer" type="button">Все</button>
+            </li>
+            <li>
+                <button class="main-filter-btn pointer" type="button">Веб-сайты</button>
+            </li>
+            <li>
+                <button class="main-filter-btn pointer" type="button">Приложения</button>
+            </li>
+            <li>
+                <button class="main-filter-btn pointer" type="button">Дизайн</button>
+            </li>
+            <li>
+                <button class="main-filter-btn pointer" type="button">Маркетинг</button>
+            </li>
+        </ul>
         <ul>
             <li>
                 <img width="370" src="./img/img21.jpg" alt="ноутбук">
