--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
 <body>
   <header>
     <nav>
-      <a class="header-logo link" href="" lang="en"> <span class="accent-color">Web</span>Studio</a>
+      <a class="header-logo link" href="" lang="en">Web<span class="header-lofo-syffix">Studio</span></a>
       <ul class="header-left-list list">
         <li class="header-left-item">
-          <a class="link header-left-link" href="">Студия</a>
+          <a class="link header-left-link current" href="">Студия</a>
         </li>
         <li class="header-left-item">
           <a class="link header-left-link" href="./portfolio.html">Портфолио</a>
@@ -40,13 +40,13 @@
     </ul>
   </header>
   <main>
-    <section>
+    <section class="title-section">
       <h1 class="main-title">Эффективные решения для вашего бизнеса</h1>
-      <button class="main-btn pointer" type="button">Заказать услугу</button>
+      <button class="main-btn" type="button">Заказать услугу</button>
     </section>
     <section>
       <h2 hidden>Features</h2>
-      <ul>
+      <ul class="list">
         <li>
           <h3 class="features-title">Внимание к деталям</h3>
           <p class="features-text">
@@ -78,28 +78,28 @@
       </ul>
     </section>
     <section>
-      <h2 class="about-title">Чем мы занимаемся</h2>
-      <ul>
-        <li><img width="376" src="./img/box1.jpg" alt="Разработчик пишет код" /></li>
-        <li><img width="376" src="./img/box2.jpg" alt="Создаем мобильные приложения" /></li>
-        <li><img width="376" src="./img/box3.jpg" alt="Цветовая палитра" /></li>
+      <h2 class="universal-title">Чем мы занимаемся</h2>
+      <ul class="list">
+        <li><img width="370" src="./img/box1.jpg" alt="Разработчик пишет код" /></li>
+        <li><img width="370" src="./img/box2.jpg" alt="Создаем мобильные приложения" /></li>
+        <li><img width="370" src="./img/box3.jpg" alt="Цветовая палитра" /></li>
       </ul>
     </section>
-    <section>
-      <h2 class="our-team">Наша команда</h2>
-      <ul>
+    <section class="our-team">
+      <h2 class="universal-title">Наша команда</h2>
+      <ul class="list">
         <li>
-          <img width="130" src="./img/img1.jpg" alt="Игорь Демьяненко" />
+          <img width="270" src="./img/img1.jpg" alt="Игорь Демьяненко" />
           <h3 class="our-developer">Игорь Демьяненко</h3>
           <p class="developer-position" lang="en">Product Designer</p>
         </li>
         <li>
-          <img width="130" src="./img/img2.jpg" alt="Ольга Репина" />
+          <img width="270" src="./img/img2.jpg" alt="Ольга Репина" />
           <h3 class="our-developer">Игорь Демьяненко</h3>
           <p class="developer-position" lang="en">Frontend Developer</p>
         </li>
         <li>
-          <img width="130" src="./img/img3.jpg" alt="Николай Тарасов" />
+          <img width="270" src="./img/img3.jpg" alt="Николай Тарасов" />
           <h3 class="our-developer">Игорь Демьяненко</h3>
           <p class="developer-position" lang="en">Marketing</p>
         </li>
@@ -111,12 +111,10 @@
       </ul>
     </section>
   </main>
-  <footer class="footer">
-    <div>
-      <a class="footer-logo link" href="" lang="en"><span class="accent-color">Web</span>Studio</a>
-    </div>
+  <footer class="footer-section">
+    <a class="footer-logo link" href="" lang="en">Web<span class="footer-logo-syffix">Studio</span> </a>
     <address class="footer-address">
-      <ul class="footer-address-list">
+      <ul class="footer-address-list list">
         <li class="footer-address-item">
           <a class="third-text-color link" href="https://goo.gl/maps/jR1SKb3CfaXYw8aB8" target="_blank">
             г. Киев, пр-т Леси Украинки, 26
