--- a/portfolio.html
+++ b/portfolio.html
@@ -17,13 +17,13 @@
 <body>
     <header>
         <nav>
-            <a class="header-logo link" href="" lang="en"> <span class="accent-color">Web</span>Studio</a>
+            <a class="header-logo link" href="" lang="en">Web<span class="header-lofo-syffix">Studio</span></a>
             <ul class="header-left-list list">
                 <li class="header-left-item">
                     <a class="link header-left-link" href="./index.html">Студия</a>
                 </li>
                 <li class="header-left-item">
-                    <a class="link header-left-link" href="./portfolio.html">Портфолио</a>
+                    <a class="link header-left-link current" href="./portfolio.html">Портфолио</a>
                 </li>
                 <li class="header-left-item">
                     <a class="link header-left-link" href="">Контакты</a>
@@ -40,82 +40,80 @@
         </ul>
     </header>
     <main>
-        <h2 hidden>Выполенные проэкты</h2>
+        <h1 hidden>Выполенные проэкты</h1>
         <ul class="main-filter list">
             <li>
-                <button class="main-filter-btn pointer" type="button">Все</button>
+                <button class="filter-btn" type="button">Все</button>
             </li>
             <li>
-                <button class="main-filter-btn pointer" type="button">Веб-сайты</button>
+                <button class="filter-btn" type="button">Веб-сайты</button>
             </li>
             <li>
-                <button class="main-filter-btn pointer" type="button">Приложения</button>
+                <button class="filter-btn" type="button">Приложения</button>
             </li>
             <li>
-                <button class="main-filter-btn pointer" type="button">Дизайн</button>
+                <button class="filter-btn" type="button">Дизайн</button>
             </li>
             <li>
-                <button class="main-filter-btn pointer" type="button">Маркетинг</button>
+                <button class="filter-btn" type="button">Маркетинг</button>
             </li>
         </ul>
-        <ul>
+        <ul class="list">
             <li>
                 <img width="370" src="./img/img21.jpg" alt="ноутбук">
-                <h3 class="project-name">Технокряк</h3>
-                <p class="type-of-project">Веб-сайт</p>
+                <h2 class="filter-name">Технокряк</h2>
+                <p class="filter-type">Веб-сайт</p>
             </li>
             <li>
                 <img width="370" src="./img/img22.jpg" alt="баскетбол">
-                <h3 class="project-name">Постер New Orlean vs Golden Star</h3>
-                <p class="type-of-project">Дизайн</p>
+                <h2 class="filter-name">Постер New Orlean vs Golden Star</h2>
+                <p class="filter-type">Дизайн</p>
             </li>
             <li>
                 <img width="370" src="./img/img23.jpg" alt="лого ресторана">
-                <h3 class="project-name">Ресторан Seafood</h3>
-                <p class="type-of-project">Приложение</p>
+                <h2 class="filter-name">Ресторан Seafood</h2>
+                <p class="filter-type">Приложение</p>
             </li>
         </ul>
-        <ul>
+        <ul class="list">
             <li>
                 <img width="370" src="./img/img24.jpg" alt="наушеики">
-                <h3 class="project-name">Проект Prime</h3>
-                <p class="type-of-project">Маркетинг</p>
+                <h2 class="filter-name">Проект Prime</h2>
+                <p class="filter-type">Маркетинг</p>
             </li>
             <li>
                 <img width="370" src="./img/img25.jpg" alt="2 коробки">
-                <h3 class="project-name">Проект Boxes</h3>
-                <p class="type-of-project">Приложение</p>
+                <h2 class="filter-name">Проект Boxes</h2>
+                <p class="filter-type">Приложение</p>
             </li>
             <li>
                 <img width="370" src="./img/img26.jpg" alt="монитор">
-                <h3 class="project-name">Inspiration has no Borders</h3>
-                <p class="type-of-project">Веб-сайт</p>
+                <h2 class="filter-name">Inspiration has no Borders</h2>
+                <p class="filter-type">Веб-сайт</p>
             </li>
         </ul>
-        <ul>
+        <ul class="list">
             <li>
                 <img width="370" src="./img/img27.jpg" alt="открытый журнал">
-                <h3 class="project-name">Издание Limited Edition</h3>
-                <p class="type-of-project">Дизайн</p>
+                <h2 class="filter-name">Издание Limited Edition</h2>
+                <p class="filter-type">Дизайн</p>
             </li>
             <li>
                 <img width="370" src="./img/img28.jpg" alt="лейба">
-                <h3 class="project-name">Проект LAB</h3>
-                <p class="type-of-project">Маркетинг</p>
+                <h2 class="filter-name">Проект LAB</h2>
+                <p class="filter-type">Маркетинг</p>
             </li>
             <li>
                 <img width="370" src="./img/img29.jpg" alt="робота с ноутбуком">
-                <h3 class="project-name">Growing Business</h3>
-                <p class="type-of-project">Приложение</p>
+                <h2 class="filter-name">Growing Business</h2>
+                <p class="filter-type">Приложение</p>
             </li>
         </ul>
     </main>
-    <footer>
-        <div>
-            <a class="footer-logo link" href="" lang="en"><span class="accent-color">Web</span>Studio</a>
-        </div>
+    <footer class="footer-section">
+        <a class="footer-logo link" href="" lang="en">Web<span class="footer-logo-syffix">Studio</span> </a>
         <address class="footer-address">
-            <ul class="footer-address-list">
+            <ul class="footer-address-list list">
                 <li class="footer-address-item">
                     <a class="third-text-color link" href="https://goo.gl/maps/jR1SKb3CfaXYw8aB8" target="_blank">
                         г. Киев, пр-т Леси Украинки, 26
