--- a/portfolio.html
+++ b/portfolio.html
@@ -43,7 +43,7 @@
         <h1 hidden>Выполенные проэкты</h1>
         <ul class="main-filter list">
             <li>
-                <button class="filter-btn" type="button">Все</button>
+                <button class="filter-btn current-btn" type="button">Все</button>
             </li>
             <li>
                 <button class="filter-btn" type="button">Веб-сайты</button>
